additional mezzanine container style overflow fixes: removing site-specific lines
(cherry picked from commit 417ef7670b111698be1aab452fb0843ce9dea7c7)

--- a/widgy/static/widgy/css/widgy_layout.scss
+++ b/widgy/static/widgy/css/widgy_layout.scss
@@ -1,9 +1,7 @@
 @import "widgy_common.scss";
 
 // Mezzanine Override
-body.widgets-projectwidgypage,
-body.page_builder-callout,
-body.blog-projectblog {
+body.page_builder-callout {
   #container {
     overflow: hidden;
   }
